--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
