--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
+    - tools
+    - platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-23.0.2
+    - build-tools-25.0.2
 
     # The SDK version used to compile your project
-    - android-23
+    - android-25
 
     # Additional components
     - extra-google-google_play_services
@@ -25,3 +25,5 @@ licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+
+
