--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,21 @@
 language: android
-jdk: oraclejdk8
+jdk:
+  - oraclejdk8
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - tools
     - platform-tools
-
-    # The BuildTools version used by your project
-    - build-tools-25.0.2
-
-    # The SDK version used to compile your project
-    - android-25
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
+    - tools
+    - build-tools-23.0.2
+    - android-23
+    - extra-android-support
     - extra-android-m2repository
-    - addon-google_apis-google-19
+    - extra-google-m2repository
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your test
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
-
+branches:
+  only:
+    - master
